--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
     right=2 cm, % seperation between body and page edge from the right
     footskip=1.0 cm, % seperation between body and footer
     % showframe % for debugging 
-]{geometry} % for adjusting page geometry
+]{geometry} % for adjusting page  
 \usepackage{titlesec} % for customizing section titles
 \usepackage{titling} % for customizing the title
 \usepackage{tabularx} % for making tables with fixed width columns
