--- a/custom/resume_grf.tex
+++ b/custom/resume_grf.tex
@@ -9,7 +9,7 @@
     right=2 cm, % seperation between body and page edge from the right
     footskip=1.0 cm, % seperation between body and footer
     % showframe % for debugging 
-]{geometry} % for adjusting page  
+]{geometry} % for adjusting page geometry
 \usepackage{titlesec} % for customizing section titles
 \usepackage{titling} % for customizing the title
 \usepackage{tabularx} % for making tables with fixed width columns
@@ -46,7 +46,7 @@
 % Ensure that generate pdf is machine readable/ATS parsable:
 \ifPDFTeX
     \input{glyphtounicode}
-    \pdfgentounicode=1   
+    \pdfgentounicode=1
     \usepackage[T1]{fontenc}
     \usepackage[utf8]{inputenc}
 \fi
@@ -289,7 +289,7 @@
     \section{Research Interests}
         \begin{spacing}{1.3}
         \begin{onecolentry}
-            My research is focused on \textbf{developing and evaluating culturally-aligned AI technologies} for high-impact areas such as education.  Broadly, I am interested in \textbf{Human-Computer Interaction}, \textbf{Human-AI Interaction}, \textbf{Responsible AI}, \textbf{Learning Sciences}, and \textbf{ICT for Development}. 
+            My research is focused on \textbf{developing and evaluating culturally-aware AI technologies} for high-impact areas such as education.  Broadly, I am interested in \textbf{Human-Computer Interaction}, \textbf{Human-AI Interaction}, \textbf{Responsible AI}, \textbf{Learning Sciences}, and \textbf{ICT for Development}. 
         \end{onecolentry}
         \end{spacing}
     \vspace{-0.11 cm}
@@ -302,9 +302,16 @@
         \educationentry{SSN College of Engineering}{BE Biomedical Engineering}{Jun'12 - May'16}
 
     \section{Ongoing Research Projects}
-
+        \researchprojectentry{Evaluation of Cultural Alignment of Indic-LLMs}{Cornell University \& Microsoft Research}
+            \begin{onecolentry}
+                \begin{highlights}
+                    \item Conducting a quantitative study to assess the cultural alignment of Indic LLMs across various Indian languages and their correspondence with Indian cultural values.
+                \end{highlights}
+            \end{onecolentry}
+            
+        \itemspacing
         
-        \researchprojectentry{Evaluation of Shiksha Copilot: An LLM-based tool for Learning Content Generation}{Cornell University \& Microsoft Research}
+        \researchprojectentry{Evaluation of Shiksha Copilot: An AI-tool for Lesson Content Generation}{Cornell University \& Microsoft Research}
             \begin{onecolentry}
                 \begin{highlights}
                     \item Designed and executed a large-scale mixed-methods study to assess the effectiveness and impact of Shiksha Copilot, an AI tool for generating learning content for Indian school teachers.
@@ -402,6 +409,7 @@
                 \begin{highlights}
                     \item  Designed and developed the CESTA Digital Anthology System from scratch to facilitate the publication of Stanford Center for Spatial and Textual Analysis's scientific works by both faculty and students.
                     \item Architected a Quarto-based system integrated with GitHub and designed processes that enable both technical and non-technical authors to contribute to the anthology.
+                    \item Mentored over 30 undergraduate interns to contribute to the first edition of digital anthology.
                 \end{highlights}
             \end{onecolentry}
         
@@ -427,11 +435,16 @@
 
 
     \section{Service}
-        \serviceentry{Student Volunteer}{Thought Summit: LLMs \& Society}{2025}
-        \serviceentry{Reviewer}{ACM CHI}{2025}
+
+        \serviceentry{Reviewer}{ACM CHI}{2024-2025}
+        \serviceentry{Mentor}{Tarunya Foundation}{2024-2025}
         \serviceentry{Research Consultant}{Pratham Education Foundation}{2023-2024}
         \serviceentry{Organizer, GSE Design Collective}{Stanford University}{2022-2023}
-        \serviceentry{Impact Officer, Global Shapers Hub - Chennai}{World Economic Forum}{2020-2021}  
+        \serviceentry{Impact Officer, Global Shapers Hub - Chennai}{World Economic Forum}{2020-2021}
+        \serviceentry{Mentor}{Mentor Together}{2020-2021}
+        \serviceentry{Volunteer}{Bodhi Tree Foundation}{2018-2020}
+        \serviceentry{Organizer}{Friends of YIF}{2017-2018}
+        \serviceentry{Organizer}{Instincts - SSN's Cultural Fest}{2015-2016}
 
 
     
